<resources>
    <string name="app_name">ShopIST</string>
    <string name="productName">Product Name</string>
    <string name="pantryQuantity">Pantry Quantity</string>
    <string name="targetQuantity">Target Quantity</string>
    <string name="clearBarcode">Clear Barcode</string>
    <string name="addPictures">Add Pictures</string>
    <string name="addStores">Add Stores</string>
    <string name="barcodeNumber">Barcode Number</string>
    <string name="saveItem">Save Product</string>
    <string name="newProduct">New Product</string>
    <string name="newList">New List</string>
    <string name="listName">List Name</string>
    <string name="pantry">Pantry</string>
    <string name="store">Store</string>
    <string name="clearLocation">Clear Location</string>
    <string name="saveList">Save List</string>
    <string name="addNewPicture">Add New Picture</string>
    <string name="browsePictures">Browse Pictures</string>
    <string name="recenterLocation">Recenter Location</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="continueWithoutAccount">Continue Without Account</string>
    <string name="enterListNumber">Enter List Number</string>
    <string name="scan">Scan</string>
    <string name="getResults">Get Results</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="shareList">Share List</string>
    <string name="viewPicture">View Picture</string>
    <string name="createAccount">Create Account</string>
    <string name="logout">Logout</string>
    <string name="price">Price</string>
    <string name="euro">€</string>
    <string name="numberOfItems">Number Of Products</string>
    <string name="driveTime">Drive Time: </string>
    <string name="name">Name</string>
    <string name="lists">Lists</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="storeQuantity">Store Quantity</string>
    <string name="pleaseInsertItemName">Please Insert Product Name</string>
    <string name="pleaseInsertItemTargetQuantity">Please Insert Product Target Quantity</string>
    <string name="pleaseInsertItemPantryQuantity">Please Insert Product Pantry Quantity</string>
    <string name="pleaseInsertItemStoreQuantity">Please Insert Product Store Quantity</string>
    <string name="pleaseSubmitPriceDataAndPictures">Please Submit Price Data And Pictures</string>
    <string name="selectedLocation">Selected Location</string>
    <string name="pleaseInsertListName">Please Insert List Name</string>
    <string name="pleaseSelectListType">Please Select List Type</string>
    <string name="manualInput">Manual Input</string>
    <string name="enterListCode">Enter List Code</string>
    <string name="ok">OK</string>
    <string name="invalidCode">Invalid Code</string>
    <string name="cancel">Cancel</string>
    <string name="somethingWentWrongNoInternetConnection">Something went wrong. Please make sure you have Internet Connection.</string>
    <string name="pleaseFillRequiredFields">Please Fill In Required Fields</string>
    <string name="authenticationFailed">Authentication Failed</string>
    <string name="warning">Warning</string>
    <string name="logoutWarning">If you confirm this action, all your lists and products will be permanently deleted! Are you sure you want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="invalidQRCode">Invalid QR Code</string>
    <string name="invalidName">Invalid Name</string>
    <string name="invalidEmail">Invalid Email</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="passwordDontMatch">Passwords Don\'t Match</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="auto">Auto</string>
    <string name="items">Products</string>
    <string name="listLocation">List Location</string>
    <string name="listDoesntHaveLocationSet">List Doesn\'t Have A Location</string>
    <string name="checkout">CHECKOUT</string>
    <string name="total_cost">Total :</string>
    <string name="ifPossibleSubmitStoresPricesImages">If possible, please submit information regarding the stores, prices and add some images.</string>
    <string name="no_drivetime">No Location/GPS/Wifi</string>
    <string name="viewPictures">View Pictures</string>
    <string name="viewStores">View Stores</string>
    <string name="moveItemToStoreList">Move Product To Store List</string>
    <string name="noInternetConnection">Synchronization will be made when Internet connection is available</string>
    <string name="moveProductToCart">Move Product To Cart</string>
    <string name="cartQuantity">Cart Quantity</string>
    <string name="targetQuantityBiggerPantryQuantity">Target Quantity Should Be Bigger Than Pantry Quantity</string>
    <string name="editProduct">Edit Product</string>
    <string name="yourRating">Your Rating</string>
    <string name="insertRating">Insert Rating (1-5)</string>
    <string name="submit">Submit</string>
    <string name="averageRating">Average Rating</string>
    <string name="votes5star">5 Star Votes</string>
    <string name="votes4star">4 Star Votes</string>
    <string name="votes3star">3 Star Votes</string>
    <string name="votes2star">2 Star Votes</string>
    <string name="votes1star">1 Star Votes</string>
    <string name="shareUsing">Share Using</string>
    <string name="checkoutThisProduct">"Hey, checkout this product: "</string>
    <string name="itHasTheBarcode">". It has the barcode "</string>
    <string name="andIsSoldAt">". It is sold at "</string>
    <string name="forString">" for "</string>
    <string name="needs">Needs</string>
    <string name="youHaveNoItemsInCart">You Have No Products In The Cart</string>
    <string name="moveToCart">Move To Cart</string>
    <string name="invalidRating">Invalid Rating</string>
    <string name="ratingMustBeBetween1And5">Rating Must Be Between 1 And 5</string>
    <string name="whereToStoreItem">Where To Store Product:</string>
    <string name="quantity">Quantity</string>
    <string name="queueWaitTime">Queue Wait Time: </string>
    <string name="productSameBarcodeAlreadyList">A product with the same barcode number is already present in this list</string>
    <string name="editList">Edit List</string>
    <string name="queueWaitTimeInvalid">It is not possible to calculate</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="location">Location</string>
    <string name="resetQuantities">Reset Quantities</string>
    <string name="addProduct">Add Product</string>
    <string name="scanList">Scan List</string>
    <string name="addList">Add List</string>
</resources>