<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40sp"
        android:paddingTop="100sp"
        android:paddingRight="40sp">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFirstName"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLastName"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center_horizontal"
            android:text="@string/createAccount"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonCreateAccount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="#F44336"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/language"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto" />

            <RadioButton
                android:id="@+id/portuguese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portuguese" />

            <RadioButton
                android:id="@+id/english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>